src/test/run-pass/crust-1.rs
crust fn f() {
}

fn main() {
}